--- a/servo/servo_with_clip.ipynb
+++ b/servo/servo_with_clip.ipynb
@@ -11,17 +11,6 @@
      "text": [
       "pybullet build time: Nov 28 2023 23:45:17\n"
      ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'clip'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mspatial\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtransform\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Rotation \u001b[38;5;28;01mas\u001b[39;00m Rot\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mclip\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Image\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'clip'"
-     ]
     }
    ],
    "source": [
@@ -42,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -449,6 +438,9 @@
      "text": [
       "startThreads creating 1 threads.\n",
       "starting thread 0\n",
+      "Initial EE pose: [0.05695421 0.05842742 1.11240143] [[ 0.7072639  -0.01201191  0.70684757]\n",
+      " [-0.70694639 -0.00899466  0.70720993]\n",
+      " [-0.00213709 -0.9998874  -0.01485337]]\n",
       "started thread 0 \n",
       "argc=2\n",
       "argv[0] = --unused\n",
@@ -475,9 +467,6 @@
       "MotionThreadFunc thread started\n",
       "ven = NVIDIA Corporation\n",
       "ven = NVIDIA Corporation\n",
-      "Initial EE pose: [0.05695421 0.05842742 1.11240143] [[ 0.7072639  -0.01201191  0.70684757]\n",
-      " [-0.70694639 -0.00899466  0.70720993]\n",
-      " [-0.00213709 -0.9998874  -0.01485337]]\n",
       "numActiveThreads = 0\n",
       "stopping threads\n",
       "Thread with taskId 0 exiting\n",
@@ -489,9 +478,9 @@
       "finished\n",
       "numActiveThreads = 0\n",
       "btShutDownExampleBrowser stopping threads\n",
+      "Thread with taskId 0 exiting\n",
       "destroy semaphore\n",
       "semaphore destroyed\n",
-      "Thread with taskId 0 exiting\n",
       "Thread TERMINATED\n",
       "destroy main semaphore\n",
       "main semaphore destroyed\n"
@@ -553,6 +542,17 @@
     "                          basePosition=target_box_center,\n",
     "                          baseOrientation=p.getQuaternionFromEuler([0,0,0]))\n",
     "\n",
+    "box2_length, box2_width, box2_depth = 0.2, 0.2, 0.6\n",
+    "target_box2_center = [1, 1, 0.6]\n",
+    "geomBox2 = p.createCollisionShape(p.GEOM_BOX, halfExtents=[box2_length/2, box2_width/2, box2_depth/2])\n",
+    "visualBox2 = p.createVisualShape(p.GEOM_BOX, halfExtents=[box2_length/2, box2_width/2, box2_depth/2],\n",
+    "                                rgbaColor=[1,0.5,0,1])\n",
+    "box2Id = p.createMultiBody(baseMass=0,\n",
+    "                          baseCollisionShapeIndex=geomBox2,\n",
+    "                          baseVisualShapeIndex=visualBox2,\n",
+    "                          basePosition=target_box2_center,\n",
+    "                          baseOrientation=p.getQuaternionFromEuler([0,0,0.5]))\n",
+    "\n",
     "# Place a blue sphere\n",
     "sphere_radius = 0.25\n",
     "sphere_position = [0.5, 1.5, 0.35]\n",
@@ -579,7 +579,7 @@
     "\n",
     "\n",
     "# Text description of the object to find\n",
-    "target_description = \"a red cube on the green plane\"\n",
+    "target_description = \"The orange rectangular prism on the green plane\"\n",
     "text_features = encode_text(target_description)\n",
     "\n",
     "joint_limits_lower = [-2.8973, -1.7628, -2.8973, -3.0718, -2.8973, -0.0175, -2.8973]\n",
@@ -663,7 +663,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pr1",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -677,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
